LWC_WorkReport/force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <label>住所</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>住所名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>