LWC_WorkReport/force-app/main/default/objects/Address__c/fields/aaa__c.field-meta.xml
<CustomField>
    <fullName>aaa__c</fullName>
    <label>aaa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>