LWC_WorkReport/force-app/main/default/objects/Address__c/fields/AddressCode__c.field-meta.xml
<CustomField>
    <fullName>AddressCode__c</fullName>
    <label>住所コード</label>
    <length>10</length>
    <type>Text</type>
</CustomField>