LWC_WorkReport/force-app/main/default/objects/Address__c/fields/D11__c.field-meta.xml
<CustomField>
    <fullName>D11__c</fullName>
    <label>D11</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Field1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A11</fullName>
            </value>
            <value>
                <fullName>A12</fullName>
            </value>
            <value>
                <fullName>B11</fullName>
            </value>
            <value>
                <fullName>B12</fullName>
            </value>
            <value>
                <fullName>C11</fullName>
            </value>
            <value>
                <fullName>C12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>