LWC_WorkReport/force-app/main/default/objects/Address__c/fields/ff__c.field-meta.xml
<CustomField>
    <fullName>ff__c</fullName>
    <label>ff</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>da</valueSetName>
    </valueSet>
</CustomField>