LWC_WorkReport/force-app/main/default/objects/Address__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>ｄ１</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>da</valueSetName>
    </valueSet>
</CustomField>