LWC_WorkReport/force-app/main/default/objects/Address__c/recordTypes/rec1.recordType-meta.xml
<RecordType>
    <fullName>rec1</fullName>
    <active>true</active>
    <label>rec1</label>
</RecordType>