LWC_WorkReport/force-app/main/default/objects/Address__c/recordTypes/rec2.recordType-meta.xml
<RecordType>
    <fullName>rec2</fullName>
    <active>true</active>
    <label>rec2</label>
</RecordType>