LWC_WorkReport/force-app/main/default/objects/Address__c/validationRules/Date_in_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_in_Range</fullName>
    <active>true</active>
    <errorConditionFormula>aaa__c &lt;0.4</errorConditionFormula>
    <errorDisplayField>aaa__c</errorDisplayField>
    <errorMessage>ffff&quot;fffff&quot;</errorMessage>
</ValidationRule>