LWC_WorkReport/force-app/main/default/objects/Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>aaa__c</columns>
    <columns>AddressCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>